--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
             <div class="nav">
                 <ul class"links">
                     <li class="signin-active"><a class="btn">Sign in</a></li>
-                    <button id="CrearCuenta"><a href="">Registrarse</a></button>
+                    <button id="CrearCuenta"><a href="./HTML/Formulario_Entrega.html">Registrarse</a></button>
                 </ul>
             </div>
             <div ng-app ng-init="checked = false">
