actualizacion falta el home

--- a/Formulario_Entrega.html
+++ b/Formulario_Entrega.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Estilo/boton.css">
     <link rel="stylesheet" href="./Estilo/Estilo.css">
-    <link rel="stylesheet" href="/PAGINA/Estilo/CosasNoEsenciales.css">
-    <script src="/PAGINA/JS/Chequers.js"></script>
+    <link rel="stylesheet" href="./Estilo/CosasNoEsenciales.css">
+    <script src="./JS/Chequers.js"></script>
     <title>Document</title>
 </head>
-<body>
-    <header class="header-holder">
-        <div><img src="fotos/corazon.jpg" id="logo"></div>
-        <li style="margin-left: 30px;" ></li>
-        <li class="boton"><h4>Inicio</h4></li>
-        <li class="boton"><h4>Buscar Pareja</h4></li>
-        <li class="boton"><h4>Perfil</h4></li>
-        <li class="boton"><h4>Cambiar plan de pagos<h4></li>
-        <li id="Seleccionado"><h4>Crear Cuenta</h4></li>
-    </header>
+    <body>
+        <header class="header-holder">
+            <div><img src="fotos/corazon.jpg" id="logo"></div>
+            <li style="margin-left: 30px;" ></li>
+            <li class="boton"><h4>Inicio</h4></li>
+            <li class="boton"><h4>Buscar Pareja</h4></li>
+            <li class="boton"><h4>Perfil</h4></li>
+            <li class="boton"><h4>Cambiar plan de pagos<h4></li>
+            <li id="Seleccionado"><h4>Crear Cuenta</h4></li>
+        </header>
     <br/>
     <div id="Contenedor_Form">
     <form name="formulario" id="formulario" method="post" novalidate onsubmit="return validarform()">
