--- a/Pagian_Personal.html
+++ b/Pagian_Personal.html
@@ -23,38 +23,39 @@
 <!-- LEFT-CONTAINER -->
 <div class="left-container">
     <!--Insertar una foto de usuario-->
-    <div id="Imagen-Usuario"></div>
-    <div>
+    <div id="Imagen-Usuario">
+        <img src="./fotos/png-face.png" alt="Imagen usuarioS">
+    </div><br/>
     <!--Calendario-->
     <div class="calendar-day block"> <!-- CALENDAR DAY (RIGHT-CONTAINER) -->
-        <div class="arrow-btn-container">
-            <a class="arrow-btn left" href="#200"><span class="icon fontawesome-angle-left"></span></a>
-            <h2 class="titular">WEDNESDAY</h2>
-            <a class="arrow-btn right" href="#201"><span class="icon fontawesome-angle-right"></span></a>
-        </div>
-        <p class="the-day">26</p>
-        <a class="add-event button" href="#27">ADD EVENT</a>
+            <div class="arrow-btn-container">
+                <a class="arrow-btn left" href="#200"><span class="icon fontawesome-angle-left"></span></a>
+                <h2 class="titular">WEDNESDAY</h2>
+                <a class="arrow-btn right" href="#201"><span class="icon fontawesome-angle-right"></span></a>
+            </div>
+            <p class="the-day">26</p>
+            <a class="add-event button" href="#27">ADD EVENT</a>
     </div>
-    <div class="calendar-month block"> <!-- CALENDAR MONTH (RIGHT-CONTAINER) -->
-        <div class="arrow-btn-container">
-            <a class="arrow-btn left" href="#202"><span class="icon fontawesome-angle-left"></span></a>
-            <h2 class="titular">APRIL 2013</h2>
-            <a class="arrow-btn right" href="#203"><span class="icon fontawesome-angle-right"></span></a>
-        </div>
+        <div class="calendar-month block"> <!-- CALENDAR MONTH (RIGHT-CONTAINER) -->
+            <div class="arrow-btn-container">
+                <a class="arrow-btn left" href="#202"><span class="icon fontawesome-angle-left"></span></a>
+                <h2 class="titular">APRIL 2013</h2>
+                <a class="arrow-btn right" href="#203"><span class="icon fontawesome-angle-right"></span></a>
+            </div>
         <table class="calendar">
-            <thead class="days-week">
-            <tr>
-                <th>S</th>
-                <th>M</th>
-                <th>T</th>
-                <th>W</th>
-                <th>R</th>
-                <th>F</th>
-                <th>S</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
+                <thead class="days-week">
+                <tr>
+                    <th>S</th>
+                    <th>M</th>
+                    <th>T</th>
+                    <th>W</th>
+                    <th>R</th>
+                    <th>F</th>
+                    <th>S</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -63,7 +64,7 @@
                 <td></td>
                 <td><a class="scnd-font-color" href="#100">1</a></td>
             </tr>
-            <tr>
+                <tr>
                 <td><a class="scnd-font-color" href="#101">2</a></td>
                 <td><a class="scnd-font-color" href="#102">3</a></td>
                 <td><a class="scnd-font-color" href="#103">4</a></td>
@@ -72,7 +73,7 @@
                 <td><a class="scnd-font-color" href="#106">7</a></td>
                 <td><a class="scnd-font-color" href="#107">8</a></td>
             </tr>
-            <tr>
+                <tr>
                 <td><a class="scnd-font-color" href="#108">9</a></td>
                 <td><a class="scnd-font-color" href="#109">10</a></td>
                 <td><a class="scnd-font-color" href="#110">11</a></td>
@@ -81,7 +82,7 @@
                 <td><a class="scnd-font-color" href="#113">14</a></td>
                 <td><a class="scnd-font-color" href="#114">15</a></td>
             </tr>
-            <tr>
+                <tr>
                 <td><a class="scnd-font-color" href="#115">16</a></td>
                 <td><a class="scnd-font-color" href="#116">17</a></td>
                 <td><a class="scnd-font-color" href="#117">18</a></td>
@@ -89,8 +90,8 @@
                 <td><a class="scnd-font-color" href="#119">20</a></td>
                 <td><a class="scnd-font-color" href="#120">21</a></td>
                 <td><a class="scnd-font-color" href="#121">22</a></td>
-            </tr>
-            <tr>
+                </tr>
+                <tr>
                 <td><a class="scnd-font-color" href="#122">23</a></td>
                 <td><a class="scnd-font-color" href="#123">24</a></td>
                 <td><a class="scnd-font-color" href="#124">25</a></td>
@@ -99,7 +100,7 @@
                 <td><a href="#127">28</a></td>
                 <td><a href="#128">29</a></td>
             </tr>
-            <tr>
+                <tr>
                 <td><a href="#129">30</a></td>
                 <td></td>
                 <td></td>
@@ -108,13 +109,22 @@
                 <td></td>
                 <td></td>
             </tr>
-            </tbody>
-        </table>
-    </div><!--Calendario Fin-->
+                </tbody>
+            </table><!--Calendario Fin-->
+        </div>
 </div>
 <!-- MIDDLE-CONTAINER -->
 <div class="middle-container">
     <!--Insertar "usuarios" boton like pedir cita y dislike galeria ordenada de fotos con un circulo y una segunda foto encima añadiremos si hay tiempo -->
+    <div class="usuario" ></div><!--1-->
+    <div class="usuario" ></div><!--2-->
+    <div class="usuario" ></div><!--3-->
+    <div class="usuario" ></div><!--4-->
+    <br>
+    <div class="usuario" ></div><!--5-->
+    <div class="usuario" ></div><!--6-->
+    <div class="usuario" ></div><!--7-->
+    <div class="usuario" ></div><!--8-->
 </div> <!-- end right-container -->
 <div class="right-container">
     <!--enviar elemneto-->
